--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Geekup - meetups for geeks</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
