--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+    />
     <title>Geekup - meetups for geeks</title>
   </head>
   <body>
