--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
     />
-    <title>Geekup - meetups for geeks</title>
+    <title>Geekup | Meetups for geeks</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
